# textkind

./: Cargo.toml  README.mkd
src/: check.rs  conversion.rs  data.rs  errors.rs  kind.rs  lib.rs  serde_support.rs  small.rs  traits.rs
tests/: checks.rs  errors.rs  kinds.rs  serde.rs  texts.rs
