[package]
name = "textkind"
version = "0.1.0"
authors = ["Robert Sedlacek <rs@474.at>"]
license = "MIT"
description = "Typed text kinds"
repository = "https://github.com/phaylon/textkind"
readme = "README.mkd"
keywords = ["text", "kind", "type-safety"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
